# django_practice

./: .gitignore  pyproject.toml
myproj/: db.sqlite3
myproj/apps/books/: urls.py  views.py
myproj/apps/books/migrations/: 0001_initial.py
myproj/config/: settings.py  urls.py
myproj/templates/books/: list_books.html
